# guardian

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
evaluation/: evaluation.py
evaluation/contact_discovery_signal_2.1.3/: README
examples/: intel.py  sgx-gmp-demo_2.6.py  teaclave-crypto_2.12.py  teaclave-http-req_2.12.py  teaclave-sealeddata_2.12.py  teaclave-tls-client_2.12.py
guardian/: __init__.py  breakpoints.py  controlstate.py  explorer.py  hooker.py  layout.py  loggers.py  plugins.py  project.py  simulation_procedures.py  timeout.py  tools.py  violation_type.py
tests/: test_disable_violation_check.py  test_violation_types.py
tests/all_violations/: appb  enclave_so_txt
tests/all_violations/App/: App.cpp  Enclave_u.c  Enclave_u.h
tests/all_violations/Enclave/: Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h
tests/disable_violation_check/: README.md
tests/entry_sanitisation/: enclave_so_txt
tests/entry_sanitisation/Enclave/: Enclave.cpp
tests/exit_sanitisation/: appb
tests/exit_sanitisation/App/: Enclave_u.c
tests/good_case/: appb  enclave_so_txt
tests/good_case/App/: App.cpp  Enclave_u.c  Enclave_u.h
tests/good_case/Enclave/: Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h
tests/out_of_jump/App/: App.h
tests/out_of_jump/Enclave/: Enclave.cpp
tests/out_of_read/: enclave_so_txt
tests/out_of_read/Enclave/: Enclave.cpp  Enclave_t.c
tests/out_of_write/: appb
tests/out_of_write/Enclave/: Enclave.cpp
tests/symbolic_jump/Enclave/: Enclave.cpp
tests/symbolic_read/App/: Enclave_u.h
tests/symbolic_read/Enclave/: Enclave.cpp  Enclave.edl  Enclave_t.h
tests/symbolic_write/Enclave/: Enclave.cpp  Enclave.h
tests/transition/: Makefile  enclave_so_txt
tests/transition2/App/: App.cpp
tests/transition2/Enclave/: Enclave_t.c
