    ############################################################################
    # Guardian                                                                 #
    # Copyright (C) 2021  The Blockhouse Technology Limited (TBTL)             #
    #                                                                          #
    # This program is free software: you can redistribute it and/or modify     #
    # it under the terms of the GNU Affero General Public License as published #
    # by the Free Software Foundation, either version 3 of the License, or     #
    # (at your option) any later version.                                      #
    #                                                                          #
    # This program is distributed in the hope that it will be useful,          #
    # but WITHOUT ANY WARRANTY; without even the implied warranty of           #
    # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
    # GNU Affero General Public License for more details.                      #
    #                                                                          #
    # You should have received a copy of the GNU Affero General Public License #
    # along with this program.  If not, see <https://www.gnu.org/licenses/>.   #
    #                                                                          #
    ############################################################################

[metadata]
name = guardian
version = 0.0.1
author = The Blockhouse Technology Limited (TBTL): Pedro Antonino, Wojciech Aleksander Woloszyn, and Bill Roscoe
author_email = wojciech@tbtl.com, pedro@tbtl.com
description = a tool that uses symbolic execution to validate an SGX enclave binary.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blockhousetech/sgx-guardian
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.6
